--- a/CustomMayd.SourceGenerators/CustomMayd.SourceGenerators.csproj
+++ b/CustomMayd.SourceGenerators/CustomMayd.SourceGenerators.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -21,8 +21,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.9.0-2.final" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0-2.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0-2.final" />
     <PackageReference Include="Uno.Roslyn" Version="1.2.0-dev.18" PrivateAssets="all" />
   </ItemGroup>
 
