--- a/Uno.Validation/Uno.Validation.Droid/Uno.Validation.Droid.csproj
+++ b/Uno.Validation/Uno.Validation.Droid/Uno.Validation.Droid.csproj
@@ -63,8 +63,14 @@
     <PackageReference Include="System.ComponentModel.Annotations">
       <Version>5.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.4.0-dev.344" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.4.0-dev.344" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.GalaSoft.MvvmLight">
+      <Version>5.4.0-uno.138</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp">
+      <Version>6.1.0-build.205.g2e0e348372</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="3.5.0-dev.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.5.0-dev.9" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
