--- a/Uno.Validation/Uno.Validation.UWP/Uno.Validation.UWP.csproj
+++ b/Uno.Validation/Uno.Validation.UWP/Uno.Validation.UWP.csproj
@@ -11,13 +11,13 @@
       <Version>6.2.11</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.1.1</Version>
+      <Version>7.0.0-preview4</Version>
     </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.1.0" />
-    <PackageReference Include="Uno.UI" Version="3.4.0" />
+    <PackageReference Include="Uno.Core" Version="2.2.0" />
+    <PackageReference Include="Uno.UI" Version="3.6.0-dev.123" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
   </ItemGroup>
